[package]
name = "buran"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.0"
backtrace = "0.3.66"
bitvec = "1.0.1"
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std"] }
dashmap = "5.4.0"
either = "1.8.0"
flume = "0.10.14"
fs2 = "0.4.3"
leb128 = "0.2.5"
libc = "0.2.132"
moka = "0.9.3"
num_enum = "0.5.7"
once_cell = "1.13.1"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
rand = "0.8.5"
rustc-hash = "1.1.0"
rustix = { version = "0.35.9", features = ["fs"] }
slab = "0.4.7"
smallvec = { version = "1.9.0", features = ["union", "const_generics"] }
tempfile = "3.3.0"
thiserror = "1.0.32"
tracing = "0.1.36"
triomphe = { git = "https://github.com/Manishearth/triomphe.git" }
twox-hash = "1.6.3"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.3"
hashlink = "0.8"

[[bench]]
name = "hash_deque"
harness = false
