[package]
name = "buran"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = "0.8.0"
bitflags = "1.3.2"
bitvec = "1.0.1"
bytemuck = { version = "1.12.1", features = ["derive", "extern_crate_std"] }
dashmap = "5.4.0"
either = "1.8.0"
flume = "0.10.14"
fs2 = "0.4.3"
futures = "0.3.24"
leb128 = "0.2.5"
libc = "0.2.132"
nonmax = "0.5.3"
num_enum = "0.5.7"
once_cell = "1.13.1"
parking_lot = { version = "0.12.1", features = ["arc_lock"] }
pin-project-lite = "0.2.9"
rustc-hash = "1.1.0"
rustix = { version = "0.35.9", features = ["fs"] }
sharded-slab = "0.1.4"
sptr = "0.3.2"
tempfile = "3.3.0"
thiserror = "1.0.32"
thread_local = "1.1.4"
tokio = { version = "1.21.0", default-features = false, features = ["sync"] }
tracing = "0.1.36"
triomphe = { git = "https://github.com/Manishearth/triomphe.git" }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
criterion = "0.4"
crossbeam-channel = "0.5.6"
hashlink = "0.8"
rand = "0.8.5"

# [[bench]]
# name = "hash_deque"
# harness = false

# [[bench]]
# name = "queues"
# harness = false

# [[bench]]
# name = "hashes"
# harness = false
